--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,27 @@ body {
 }
 
 h1 {
-    margin-top: 40px;
     font-weight: 800;
     font-size: 40px;
     color: #63c3d1;
+    text-decoration: none;
+}
+
+h1 a:link, a:visited, a:hover, a:active  {
+    text-decoration: none;
+    font-size: 40px;
+    color: #63c3d1;
+    text-decoration: none;
 }
 
 .header-nav {
-    margin: 20px 0px;
+    display: flex;
+    justify-content: space-between;
+    margin: 40px 0px;
+}
+
+.header-nav-left {
+}
+
+.header-nav-right {
 }
